commit-v01-ajuste estilo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    <div data-ani="entrada-direita-854 0.5s ease-out 1" data-id="854" id="item854" alt="expediente" style="left:620px !important;top:50px !important;width: 536px !important;height:855px !important;" class="pageItem group ">
     <img src="assets/images/blank.gif" alt="Polygon" id="item752" class="pageItem " data-src="assets/images/item_752.png"/>
     <div id="item791" class="pageItem">
-     <p class="autoParaStyle1">EXPEDIENTE</p>
+     <p class="foguete-expediente">EXPEDIENTE</p>
      <p class="exp-cargo">cargo</p>
      <p class="exp-nome">Nome Nonon</p>
      <p class="exp-cargo">cargo</p>
