commit-v01-incluindo página de marcas

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    <div data-ani="entrada-direita-854 0.5s ease-out 1" data-id="854" id="item854" alt="expediente" style="left:620px !important;top:50px !important;width: 536px !important;height:855px !important;" class="pageItem group ">
     <img src="assets/images/blank.gif" alt="Polygon" id="item752" class="pageItem " data-src="assets/images/item_752.png"/>
     <div id="item791" class="pageItem">
-     <p class="foguete-expediente">EXPEDIENTE</p>
+     <p class="exp-foguete">EXPEDIENTE</p>
      <p class="exp-cargo">cargo</p>
      <p class="exp-nome">Nome Nonon</p>
      <p class="exp-cargo">cargo</p>
@@ -116,6 +116,8 @@
      <p class="exp-nome">Nome Nonon</p>
      <p class="exp-cargo">cargo</p>
      <p class="exp-nome">Nome Nonon</p>
+     <p class="exp-cargo">PUBLICAÇÃO DIGITAL</p>
+     <p class="exp-nome">Link Editoração</p>
     </div>
    </div>
    <button data-ani="entrada-esquerda-870 0.5s ease-out 1" data-id="870" id="item870" name="exp-close" onclick="go(event,[{n:1,link:1,id:870,act:'reverse'},{del:0.25,n:1,id:854,act:'reverse'}]);" aria-label="exp-close" class="pageItem ">
@@ -268,7 +270,7 @@
    <div id="item1534" class="pageItem singleline hidden" data-ani="baixo-cima-1534 0.5s ease-out 1" data-id="1534" data-hidestart="1" alt="apresentacao">
     <p class="foguete">personagens</p>
    </div>
-   <a href="javascript:nav.to(6);">
+<a href="javascript:nav.to(6);">
     <img src="assets/images/blank.gif" data-ani="entrada-esquerda-1650 0.8s ease-out 1" data-id="1650" id="item1650" data-hidestart="1" class="pageItem box-persona hidden" alt="persona-01" style="left:-180px !important;top:80px !important;" data-src="assets/images/btn-stela.webp"/>
    </a>
    
@@ -302,7 +304,6 @@
     <a href="javascript:nav.to(14);">
         <img src="assets/images/blank.gif" data-ani="entrada-direita-1659 0.8s ease-out 1" data-id="1659" id="item1659" alt="persona-09" style="left:620px !important;top:880px !important;" class="pageItem box-persona " data-src="assets/images/btn-juliana.webp"/>
     </a>
-   
    <div id="item1240" class="pageItem fauxgroup" alt="Rectangle">
     <img src="assets/images/blank.gif" alt="SVG" style="" id="item1241" class="pageItem " data-src="assets/images/logo-mpt-branco-slogan.svg"/>
    </div>
@@ -649,7 +650,7 @@
    </div>
    <div id="item3448" class="pageItem scroll-vert-showScroll scroll-vert_showScroll scroll-vert hidden" data-ani="fadein-3448 1s ease-out 1" data-id="3448" data-hidestart="1" alt="depoimento">
     <div id="item3449" class="pageItem">
-     <p class="depoimento">“Sou Giovankya de Oliveira. <br/>Sou surda não oralizada. Me comunico pela Língua Brasileira de Sinais (Libras). Nunca trabalhei, mas tenho o sonho e batalho para ser empreendedora.</p>
+     <p class="depoimento">“Sou Giovankya de Oliveira. Sou surda não oralizada. Me comunico pela Língua Brasileira de Sinais (Libras). Nunca trabalhei, mas tenho o sonho e batalho para ser empreendedora.</p>
      <p class="depoimento">Fiquei surda por causa de uma febre muito alta, que provocou o estouro dos meus tímpanos. aconteceu quando eu era muito nova. Desde então, faço uso da Língua Brasileira de Sinais (Libras).</p>
      <p class="depoimento">Meu sonho de vida é ter meu comércio e ser empreendedora. Fui aposentada por invalidez e por isso nunca trabalhei. Moro com minha irmã na casa que foi herança de meus pais. Vivemos da pensão de nossos pais e de minha aposentadoria. Sou alto astral. Gosto de sorrir e me considero muito simpática com as pessoas.</p>
      <p class="depoimento">Acho que o mundo para as pessoas com deficiência é muito complicado. Falta informação e comunicação para as pessoas surdas. Não temos acessibilidade e faltam profissionais que sabem o sinal de Libras em espaços técnicos, públicos e privados. Passamos muita dificuldade com isso. Se tivessem pessoas que soubessem Libras, nos sentiríamos mais incluídas na sociedade”.</p>
@@ -867,10 +868,52 @@
      </div>
     </div>
    </button>
-   <button data-id="4602" name="Button 22" onclick="nav.back(this);" aria-label="Button 22" id="item4602" class="pageItem ">
+   <button data-id="1285" name="Button 14" onclick="nav.next(this);" aria-label="Button 14" id="item1285" class="pageItem ">
     <div class="pageItem state btn-off">
-     <div id="item4605" class="pageItem fauxgroup" alt="Rectangle">
-      <img src="assets/images/blank.gif" alt="SVG" style="" id="item4606" class="pageItem " data-src="assets/images/icon-prev.svg"/>
+     <div id="item1288" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item1289" class="pageItem " data-src="assets/images/icon-next.svg"/>
+     </div>
+    </div>
+   </button>
+   <button data-id="1293" name="Button 15" onclick="nav.back(this);" aria-label="Button 15" id="item1293" class="pageItem ">
+    <div class="pageItem state btn-off">
+     <div id="item1296" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item1297" class="pageItem " data-src="assets/images/icon-prev.svg"/>
+     </div>
+    </div>
+   </button>
+  </div>
+ </li>
+ <li class="page" data-name="17">
+  <div class="page-scale-wrap mq-none mq-default" role="region" data-layout-name="undefined" data-ani-load="go({target:this},[{n:1,link:1,id:3851,act:'play'},{del:0.25,n:1,id:4888,sn:1,act:'play'}], 'pageload');" style="width:600px;height:1065px;">
+   <div id="item4823" alt="Rectangle" class="pageItem ">&nbsp;</div>
+   <img src="assets/images/blank.gif" data-ani="entrada-esquerda-3851 0.8s ease-out 1" data-id="3851" id="item3851" data-hidestart="1" class="pageItem hidden" alt="plus-fio" style="left:-836px !important;top:-304px !important;" data-src="assets/images/item_3851.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:208px !important;top:337px !important;" id="item4824" class="pageItem " data-src="assets/images/item_4824.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:217px !important;top:515px !important;" id="item4832" class="pageItem " data-src="assets/images/item_4832.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:222px !important;top:625px !important;" id="item4839" class="pageItem " data-src="assets/images/item_4839.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:208px !important;top:412px !important;" id="item4849" class="pageItem " data-src="assets/images/item_4849.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:202px !important;top:832px !important;" id="item4860" class="pageItem " data-src="assets/images/item_4860.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:221px !important;top:716px !important;" id="item4867" class="pageItem " data-src="assets/images/item_4867.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:212px !important;top:217px !important;" id="item4876" class="pageItem " data-src="assets/images/item_4876.png"/>
+   <img src="assets/images/blank.gif" data-ani="entrada-direita-4888 0.8s ease-out 1" data-id="4888" id="item4888" alt="Polygon" style="left:871px !important;top:613px !important;" class="pageItem " data-src="assets/images/item_4888.png"/>
+   <div id="item4921" class="pageItem">
+    <p class="titulo-apoio">Confira as organizações<br />que já apoiam essa causa</p>
+    <p class="olho-apoio">A inclusão é dever de toda a sociedade, e<br />a primeira barreira a ser quebrada é a atitudinal</p>
+   </div>
+   <button data-id="4896" name="Button 25" onclick="nav.back(this);" aria-label="Button 25" id="item4896" class="pageItem ">
+    <div class="pageItem state btn-off">
+     <div id="item4899" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item4900" class="pageItem " data-src="assets/images/icon-prev-black.svg"/>
+     </div>
+    </div>
+   </button>
+   <button data-id="4732" name="Button 23" onclick="nav.to(3);" aria-label="Button 23" id="item4732" class="pageItem ">
+    <div class="pageItem state btn-off">
+     <div id="item4735" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item4736" class="pageItem " data-src="assets/images/icon-menu-black.svg"/>
+     </div>
+     <div id="item4738" class="pageItem singleline">
+      <p class="tag-icon"><span class="cor-black">MENU</span></p>
      </div>
     </div>
    </button>
