commit-v01-incluindo link instagram

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p class="txt"><span class="cor-branco">Para construir uma sociedade verdadeiramente igualitária, é preciso romper estigmas e superar estereótipos sobre pessoas com deficiência.</span></p>
     <p class="txt"><span class="cor-branco">A campanha Diferenças que Somam convida empresas e a sociedade a compreender a inclusão como um valor essencial. Mais do que um dever, a convivência com a diversidade nos torna mais empáticos, solidários e humanos.</span></p>
     <p class="txt"><span class="cor-branco">A primeira barreira a ser vencida é a atitude — e ela começa em cada um de nós.</span></p>
-   </div><a href="https://www.instagram.com/" target="_blank">
+   </div><a href="https://www.instagram.com/reconectaes/" target="_blank">
     <button data-id="923" name="Button 5" aria-label="Button 5" id="item923" class="pageItem ">
      <div class="pageItem state btn-off">
       <div id="item636" class="pageItem fauxgroup" alt="Rectangle">
@@ -805,7 +805,7 @@
     <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">busdoor</a></span></p>
     <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">cartaz A3</a></span></p>
     <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outdoor</a></span></p>
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes dociais</a></span></p>
+    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes sociais</a></span></p>
    </div>
    <div id="item1240" class="pageItem fauxgroup" alt="Rectangle">
     <img src="assets/images/blank.gif" alt="SVG" style="" id="item1241" class="pageItem " data-src="assets/images/logo-mpt-branco-slogan.svg"/>
