commit-v02-inclusão de vídeos

--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
    <div id="item574" class="pageItem fauxgroup" data-ani="entrada-esquerda-574 1s ease-out 1" data-id="574" alt="plus-laranja1">
     <img src="assets/images/blank.gif" alt="SVG" style="" id="item575" class="pageItem " data-src="assets/images/plus-laranja.svg"/>
    </div>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="top:50px !important;" id="item598" class="pageItem " data-src="assets/images/item_598.jpg"/>
    <div id="item516" class="pageItem">
     <h1 class="titulo-abre"><span class="cor-branco">Sobre a Campanha</span></h1>
     <p class="txt"><span class="cor-branco">Para construir uma sociedade verdadeiramente igualitária, é preciso romper estigmas e superar estereótipos sobre pessoas com deficiência.</span></p>
     <p class="txt"><span class="cor-branco">A campanha Diferenças que Somam convida empresas e a sociedade a compreender a inclusão como um valor essencial. Mais do que um dever, a convivência com a diversidade nos torna mais empáticos, solidários e humanos.</span></p>
     <p class="txt"><span class="cor-branco">A primeira barreira a ser vencida é a atitude — e ela começa em cada um de nós.</span></p>
-   </div><a href="https://www.instagram.com/reconectaes/" target="_blank">
+   </div><a href="https://www.instagram.com/" target="_blank">
     <button data-id="923" name="Button 5" aria-label="Button 5" id="item923" class="pageItem ">
      <div class="pageItem state btn-off">
       <div id="item636" class="pageItem fauxgroup" alt="Rectangle">
@@ -96,6 +95,7 @@
      </div>
     </div>
    </button>
+   <div id="item5046" class="pageItem embed-container" alt="HTML"><iframe width="600" height="338" src="https://www.youtube.com/embed/r44Jce7ghkc?si=nqK3ATDqxdMpdRaM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe></div>
    <div data-ani="entrada-direita-854 0.5s ease-out 1" data-id="854" id="item854" alt="expediente" style="left:620px !important;top:50px !important;width: 536px !important;height:855px !important;" class="pageItem group ">
     <img src="assets/images/blank.gif" alt="Polygon" id="item752" class="pageItem " data-src="assets/images/item_752.png"/>
     <div id="item791" class="pageItem">
@@ -170,8 +170,8 @@
    <div id="item1010" class="pageItem">
     <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(4);">apresentação</a></span></p>
     <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(5);">personagens</a></span></p>
-    <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(15)">peças gráficas</a></span></p>
-    <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(16)">adesão</a></span></p>
+    <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(15);">peças gráficas</a></span></p>
+    <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(16);">adesão</a></span></p>
    </div>
    <button data-id="1279" name="Button 12" onclick="nav.next(this);" aria-label="Button 12" id="item1279" class="pageItem ">
     <div class="pageItem state btn-off">
@@ -252,6 +252,21 @@
     <div class="pageItem state btn-off">
      <div id="item1296" class="pageItem fauxgroup" alt="Rectangle">
       <img src="assets/images/blank.gif" alt="SVG" style="" id="item1297" class="pageItem " data-src="assets/images/icon-prev.svg"/>
+     </div>
+    </div>
+   </button>
+   <button data-id="5093" name="Button 31" onclick="go(event,[{n:1,link:1,id:5104,act:'play'},{n:1,id:5106,act:'play'}]);" aria-label="Button 31" id="item5093" class="pageItem ">
+    <div class="pageItem state btn-off">
+     <div id="item5095" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="width:65px !important;height:62px !important;" id="item5096" class="pageItem " data-src="assets/images/icon-video.svg"/>
+     </div>
+    </div>
+   </button>
+   <div id="item5104" class="pageItem embed-container" data-ani="entrada-esquerda-5104 1s ease-out 1" data-id="5104" alt="video"><iframe width="600" height="338" src="https://www.youtube.com/embed/4VT23sOnBuw?si=aB50vxkQrManTBPe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe></div>
+   <button data-ani="fadein-5106 0.3s ease-out 1" data-id="5106" id="item5106" data-hidestart="1" class="pageItem hidden" name="close-video" onclick="go(event,[{n:1,link:1,id:5106,act:'reverse'},{n:1,id:5104,act:'reverse'}]);" aria-label="close-video">
+    <div class="pageItem state btn-off">
+     <div id="item5109" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item5110" class="pageItem " data-src="assets/images/icon-close-black.svg"/>
      </div>
     </div>
    </button>
@@ -805,7 +820,7 @@
     <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">busdoor</a></span></p>
     <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">cartaz A3</a></span></p>
     <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outdoor</a></span></p>
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes sociais</a></span></p>
+    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes dociais</a></span></p>
    </div>
    <div id="item1240" class="pageItem fauxgroup" alt="Rectangle">
     <img src="assets/images/blank.gif" alt="SVG" style="" id="item1241" class="pageItem " data-src="assets/images/logo-mpt-branco-slogan.svg"/>
@@ -868,17 +883,17 @@
      </div>
     </div>
    </button>
-   <button data-id="1285" name="Button 14" onclick="nav.next(this);" aria-label="Button 14" id="item1285" class="pageItem ">
+   <button data-id="5071" name="Button 29" onclick="nav.next(this);" aria-label="Button 29" id="item5071" class="pageItem ">
     <div class="pageItem state btn-off">
-     <div id="item1288" class="pageItem fauxgroup" alt="Rectangle">
-      <img src="assets/images/blank.gif" alt="SVG" style="" id="item1289" class="pageItem " data-src="assets/images/icon-next.svg"/>
+     <div id="item5075" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item5076" class="pageItem " data-src="assets/images/icon-next.svg"/>
      </div>
     </div>
    </button>
-   <button data-id="1293" name="Button 15" onclick="nav.back(this);" aria-label="Button 15" id="item1293" class="pageItem ">
+   <button data-id="5065" name="Button 28" onclick="nav.back(this);" aria-label="Button 28" id="item5065" class="pageItem ">
     <div class="pageItem state btn-off">
-     <div id="item1296" class="pageItem fauxgroup" alt="Rectangle">
-      <img src="assets/images/blank.gif" alt="SVG" style="" id="item1297" class="pageItem " data-src="assets/images/icon-prev.svg"/>
+     <div id="item5068" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item5069" class="pageItem " data-src="assets/images/icon-prev.svg"/>
      </div>
     </div>
    </button>
@@ -888,32 +903,36 @@
   <div class="page-scale-wrap mq-none mq-default" role="region" data-layout-name="undefined" data-ani-load="go({target:this},[{n:1,link:1,id:3851,act:'play'},{del:0.25,n:1,id:4888,sn:1,act:'play'}], 'pageload');" style="width:600px;height:1065px;">
    <div id="item4823" alt="Rectangle" class="pageItem ">&nbsp;</div>
    <img src="assets/images/blank.gif" data-ani="entrada-esquerda-3851 0.8s ease-out 1" data-id="3851" id="item3851" data-hidestart="1" class="pageItem hidden" alt="plus-fio" style="left:-836px !important;top:-304px !important;" data-src="assets/images/item_3851.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:208px !important;top:337px !important;" id="item4824" class="pageItem " data-src="assets/images/item_4824.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:217px !important;top:515px !important;" id="item4832" class="pageItem " data-src="assets/images/item_4832.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:222px !important;top:625px !important;" id="item4839" class="pageItem " data-src="assets/images/item_4839.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:208px !important;top:412px !important;" id="item4849" class="pageItem " data-src="assets/images/item_4849.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:202px !important;top:832px !important;" id="item4860" class="pageItem " data-src="assets/images/item_4860.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:221px !important;top:716px !important;" id="item4867" class="pageItem " data-src="assets/images/item_4867.png"/>
-   <img src="assets/images/blank.gif" alt="Rectangle" style="left:212px !important;top:217px !important;" id="item4876" class="pageItem " data-src="assets/images/item_4876.png"/>
-   <img src="assets/images/blank.gif" data-ani="entrada-direita-4888 0.8s ease-out 1" data-id="4888" id="item4888" alt="Polygon" style="left:871px !important;top:613px !important;" class="pageItem " data-src="assets/images/item_4888.png"/>
-   <div id="item4921" class="pageItem">
-    <p class="titulo-apoio">Confira as organizações<br />que já apoiam essa causa</p>
-    <p class="olho-apoio">A inclusão é dever de toda a sociedade, e<br />a primeira barreira a ser quebrada é a atitudinal</p>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:98px !important;top:764px !important;" id="item4824" class="pageItem " data-src="assets/images/item_4824.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:148px !important;top:844px !important;" id="item4832" class="pageItem " data-src="assets/images/item_4832.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:342px !important;top:853px !important;" id="item4839" class="pageItem " data-src="assets/images/item_4839.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:320px !important;top:753px !important;" id="item4849" class="pageItem " data-src="assets/images/item_4849.png"/>
+   <img src="assets/images/blank.gif" alt="Rectangle" style="left:221px !important;top:564px !important;" id="item4876" class="pageItem " data-src="assets/images/item_4876.png"/>
+   <img src="assets/images/blank.gif" data-ani="entrada-direita-4888 0.8s ease-out 1" data-id="4888" id="item4888" alt="Polygon" style="left:871px !important;top:533px !important;" class="pageItem " data-src="assets/images/item_4888.png"/>
+   <div id="item4948" class="pageItem singleline">
+    <p class="patrocinio"><span class="foguete-realiza">realização</span></p>
    </div>
-   <button data-id="4896" name="Button 25" onclick="nav.back(this);" aria-label="Button 25" id="item4896" class="pageItem ">
+   <div id="item5126" class="pageItem singleline">
+    <p class="patrocinio"><span class="foguete-apoio">apoio</span></p>
+   </div>
+   <div id="item5120" class="pageItem embed-container" alt="HTML"><iframe width="600" height="338" src="https://www.youtube.com/embed/r44Jce7ghkc?si=nqK3ATDqxdMpdRaM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe></div>
+   <div id="item1718" class="pageItem fauxgroup" alt="Rectangle">
+    <img src="assets/images/blank.gif" alt="SVG" style="" id="item1763" class="pageItem " data-src="assets/images/logo-mpt-slogan.svg"/>
+   </div>
+   <button data-id="1721" name="Button 16" onclick="nav.to(3);" aria-label="Button 16" id="item1721" class="pageItem ">
     <div class="pageItem state btn-off">
-     <div id="item4899" class="pageItem fauxgroup" alt="Rectangle">
-      <img src="assets/images/blank.gif" alt="SVG" style="" id="item4900" class="pageItem " data-src="assets/images/icon-prev-black.svg"/>
+     <div id="item1723" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item1776" class="pageItem " data-src="assets/images/icon-menu-black.svg"/>
+     </div>
+     <div id="item1726" class="pageItem singleline">
+      <p class="tag-icon"><span class="cor-black">MENU</span></p>
      </div>
     </div>
    </button>
-   <button data-id="4732" name="Button 23" onclick="nav.to(3);" aria-label="Button 23" id="item4732" class="pageItem ">
+   <button data-id="4988" name="Button 27" onclick="nav.back(this);" aria-label="Button 27" id="item4988" class="pageItem ">
     <div class="pageItem state btn-off">
-     <div id="item4735" class="pageItem fauxgroup" alt="Rectangle">
-      <img src="assets/images/blank.gif" alt="SVG" style="" id="item4736" class="pageItem " data-src="assets/images/icon-menu-black.svg"/>
-     </div>
-     <div id="item4738" class="pageItem singleline">
-      <p class="tag-icon"><span class="cor-black">MENU</span></p>
+     <div id="item4991" class="pageItem fauxgroup" alt="Rectangle">
+      <img src="assets/images/blank.gif" alt="SVG" style="" id="item4992" class="pageItem " data-src="assets/images/icon-prev-black.svg"/>
      </div>
     </div>
    </button>
