commit-v02-correção-embed-youtube

--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
    <div id="item5126" class="pageItem singleline">
     <p class="patrocinio"><span class="foguete-apoio">apoio</span></p>
    </div>
-   <div id="item5120" class="pageItem embed-container" alt="HTML"><iframe width="600" height="338" src="https://www.youtube.com/embed/r44Jce7ghkc?si=nqK3ATDqxdMpdRaM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe></div>
+   <div id="item5120" class="pageItem embed-container" alt="HTML"><iframe width="600" height="338" src="https://www.youtube.com/embed/gBTSD_QcsSk?si=EV5fZg9UnR0TK889" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" ></iframe></div>
    <div id="item1718" class="pageItem fauxgroup" alt="Rectangle">
     <img src="assets/images/blank.gif" alt="SVG" style="" id="item1763" class="pageItem " data-src="assets/images/logo-mpt-slogan.svg"/>
    </div>
