v03-atualização expediente e menus internos

--- a/index.html
+++ b/index.html
@@ -99,24 +99,20 @@
    <div data-ani="entrada-direita-854 0.5s ease-out 1" data-id="854" id="item854" alt="expediente" style="left:620px !important;top:50px !important;width: 536px !important;height:855px !important;" class="pageItem group ">
     <img src="assets/images/blank.gif" alt="Polygon" id="item752" class="pageItem " data-src="assets/images/item_752.png"/>
     <div id="item791" class="pageItem">
-     <p class="exp-foguete">EXPEDIENTE</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">cargo</p>
-     <p class="exp-nome">Nome Nonon</p>
-     <p class="exp-cargo">PUBLICAÇÃO DIGITAL</p>
+    <p class="exp-foguete">EXPEDIENTE</p>
+     <p class="exp-cargo">Campanha criada por:</p>
+     <p class="exp-nome">P6 Comunicação</p>
+     <p class="exp-cargo">Protagonistas da Campanha:</p>
+     <p class="exp-nome">Ciro Ferreira, <br/>Dilma do Nascimento Rocha, <br/>Erick Luiz da Silva, <br/>Giovankya de Oliveira, <br/>Juliana Vitória, <br/>Lilian Viana, <br/>Magna Alcântara, <br/>Raíza Knust, <br/>Stela Raye e <br/>Valdecir Nogueira da Silva</p>
+     <p class="exp-cargo">Coordenação da Campanha:</p>
+     <p class="exp-nome">Liege Nunes Nogueira Labuto e <br/>Alcione Coutinho Carvalho (Ascom MPT/ES) <br/>e Wendell Luís Táboas (ASREP MPT/ES)</p>
+     <p class="exp-cargo">Supervisão:</p>
+     <p class="exp-nome">Danielle Olivares Corrêa (Procuradora do Trabalho no MPT/Campinas-SP e Coordenadora Nacional da COORDIGUALDADE /MPT) e Fernanda Barreto Naves (Procuradora do Trabalho no MPT/ES e Vice-Coordenadora Nacional da Coordigualdade)</p>
+     <p class="exp-cargo">Agradecimento especial:</p>
+     <p class="exp-nome">aos jurados das propostas da campanha</p>
+     <p class="exp-cargo">Website:</p>
+     <p class="exp-nome">WL Agência Digital</p>
+     <p class="exp-cargo">Publicação digital:</p>
      <p class="exp-nome">Link Editoração</p>
     </div>
    </div>
@@ -170,7 +166,7 @@
    <div id="item1010" class="pageItem">
     <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(4);">apresentação</a></span></p>
     <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(5);">personagens</a></span></p>
-    <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(15);">peças gráficas</a></span></p>
+    <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(15);">Acesse o material da Campanha</a></span></p>
     <p class="menu"><span class="menu-foguete"><a href="javascript:nav.to(16);">adesão</a></span></p>
    </div>
    <button data-id="1279" name="Button 12" onclick="nav.next(this);" aria-label="Button 12" id="item1279" class="pageItem ">
@@ -813,14 +809,15 @@
    </div>
    <img src="assets/images/blank.gif" data-ani="entrada-direita-4188 0.8s ease-out 1" data-id="4188" id="item4188" alt="Polygon" style="left:641px !important;top:296px !important;" class="pageItem " data-src="assets/images/item_4188.png"/>
    <div id="item4189" class="pageItem singleline hidden" data-ani="baixo-cima-4189 0.5s ease-out 1" data-id="4189" data-hidestart="1" alt="pecas-graficas">
-    <p class="foguete">peças gráficas</p>
+    <p class="foguete-peq">Acesse o material da Campanha</p>
    </div>
    <div id="item4291" class="pageItem">
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">banners animados</a></span></p>
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">busdoor</a></span></p>
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">cartaz A3</a></span></p>
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outdoor</a></span></p>
-    <p class="menu"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes dociais</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">banners animados</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">busdoor</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">cartaz A3</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outdoor</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes dociais</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outros</a></span></p>
    </div>
    <div id="item1240" class="pageItem fauxgroup" alt="Rectangle">
     <img src="assets/images/blank.gif" alt="SVG" style="" id="item1241" class="pageItem " data-src="assets/images/logo-mpt-branco-slogan.svg"/>
