v04-correção ortográfica no menu

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
     <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">busdoor</a></span></p>
     <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">cartaz A3</a></span></p>
     <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outdoor</a></span></p>
-    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes dociais</a></span></p>
+    <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">redes sociais</a></span></p>
     <p class="menu-pecas"><span class="pecas-foguete"><a href="https://drive.google.com/drive/folders/1pCBhtaNCb1-IYVVJpONMl3zL0aGScv8j" target="_blank">outros</a></span></p>
    </div>
    <div id="item1240" class="pageItem fauxgroup" alt="Rectangle">
