--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p class="txt"><span class="cor-branco">Para construir uma sociedade verdadeiramente igualitária, é preciso romper estigmas e superar estereótipos sobre pessoas com deficiência.</span></p>
     <p class="txt"><span class="cor-branco">A campanha Diferenças que Somam convida empresas e a sociedade a compreender a inclusão como um valor essencial. Mais do que um dever, a convivência com a diversidade nos torna mais empáticos, solidários e humanos.</span></p>
     <p class="txt"><span class="cor-branco">A primeira barreira a ser vencida é a atitude — e ela começa em cada um de nós.</span></p>
-   </div><a href="https://www.instagram.com/" target="_blank">
+   </div><a href="https://www.instagram.com/reconectaes/" target="_blank">
     <button data-id="923" name="Button 5" aria-label="Button 5" id="item923" class="pageItem ">
      <div class="pageItem state btn-off">
       <div id="item636" class="pageItem fauxgroup" alt="Rectangle">
